# transformer_from_scratch

./: 2_positional_encoding.ipynb  3_self_attention_mechanism.ipynb  README.md  config.py  dataset.py  experimentation.ipynb  model_transformer.py  pyproject.toml  train.py  transformer_notes.ipynb
notes/: 1_tokenizers_fundamentals.ipynb  3_self_attention_mechanism.ipynb  4_normalization_&_residual_connections.ipynb  5_feed_forward_layer.ipynb  6_masking.ipynb
runs/tmodel/: events.out.tfevents.1744799134.fiftyfive-tech.20532.0  events.out.tfevents.1744799276.fiftyfive-tech.9244.0  events.out.tfevents.1744799511.fiftyfive-tech.24552.0  events.out.tfevents.1744799829.fiftyfive-tech.21608.0  events.out.tfevents.1744800171.fiftyfive-tech.23124.0  events.out.tfevents.1744800485.fiftyfive-tech.31352.0  events.out.tfevents.1744800578.fiftyfive-tech.26208.0  events.out.tfevents.1744800631.fiftyfive-tech.20968.0  events.out.tfevents.1744800679.fiftyfive-tech.12472.0  events.out.tfevents.1744800741.fiftyfive-tech.6412.0  events.out.tfevents.1744801711.fiftyfive-tech.31536.0  events.out.tfevents.1744801837.fiftyfive-tech.21740.0  events.out.tfevents.1744802009.fiftyfive-tech.2368.0  events.out.tfevents.1744802062.fiftyfive-tech.30356.0  events.out.tfevents.1744802691.fiftyfive-tech.12816.0  events.out.tfevents.1744802986.fiftyfive-tech.21140.0  events.out.tfevents.1744803079.fiftyfive-tech.21448.0  events.out.tfevents.1744803165.fiftyfive-tech.25172.0  events.out.tfevents.1744803318.fiftyfive-tech.24556.0  events.out.tfevents.1744803709.fiftyfive-tech.32680.0  (+33 more)
