[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
